# rust-web-example

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CLEANUP_SUMMARY.md  Cargo.toml  Dockerfile  Makefile.toml  QUICKSTART.md  README.md  README_AUTH.md  README_MAKEFILE.md  docker-compose.yml
.github/workflows/: ci.yml
common/: Cargo.toml
common/src/: db.rs
scripts/: create_user.sh
server/: Cargo.toml
server/.sqlx/: README.md
server/migrations/: 20250101000000_init.down.sql  20250101000000_init.up.sql  20250124000000_create_users.down.sql  20250124000000_create_users.up.sql
server/src/: admin.rs  api.rs  auth.rs  auth_handlers.rs  main.rs  middlewares.rs  site.rs  storage.rs
templates/: 404.html  base.html
templates/admin/: dashboard.html
templates/auth/: login.html  register.html
templates/pages/: index.html  profile.html
templates/partials/: example_partial.html  example_refresh.html
