[package]
name = "web-template"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { workspace = true }
tera = { version = "2", features = ["glob_fs"] }
sqlx = { workspace = true, features = ["sqlite", "postgres", "any", "uuid"] }
dotenv = { workspace = true }
tower = "0.5.3"
tower-http = { version = "0.7", features = ["fs", "trace", "set-header"] }
tower-cookies = "0.11.0"
serde = { workspace = true }
serde_json = "1.0"
anyhow = { workspace = true }
uuid = { workspace = true }
web-template-common = { path = "../common" }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = "0.3"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
thiserror = "2.0"
